--- a/Index.html
+++ b/Index.html
@@ -13,5 +13,6 @@
         <li>Karuna</li>
         <li>Harinitha</li>
     </ol>
+    <a href="Images.html">Click here to see images </a>
 </body>
 </html>
