--- a/Index.html
+++ b/Index.html
@@ -13,6 +13,31 @@
         <li>Karuna</li>
         <li>Harinitha</li>
     </ol>
-    <a href="Images.html">Click here to see images </a>
+    <a href="Image.html">Click here to see images </a>
+    <br>
+    <form>
+        <label>Name:</label>
+        <input type="text" >
+        <label>Email:</label>
+        <input type="email"> 
+        <label>Password:</label>
+        <input type="password">
+        <button type="submit">Submit</button>
+    </form>
+    <br>
+    <table border="1">
+        <tr>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Password</th>
+        </tr>
+        <tr>
+            <td>Preetha</td>
+            <td>preetha@gmail.com</td>
+            <td>Preeha123</td>
+        </tr>
+    </table>
+
+    
 </body>
 </html>
