--- a/Index.html
+++ b/Index.html
@@ -4,28 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <p class="center">List of Students </p>
     <ol>
         <li>Preetha</li>
         <li>Vannamahi</li>
         <li>ShubhaShree</li>
-        <li>Karuna</li>
+        <li>Karunya</li>
         <li>Harinitha</li>
     </ol>
     <a href="Image.html">Click here to see images </a>
     <br>
+    <div class="relative">
     <form>
         <label>Name:</label>
-        <input type="text" >
+        <input type="text" ><br>
         <label>Email:</label>
-        <input type="email"> 
+        <input type="email"> <br>
         <label>Password:</label>
-        <input type="password">
+        <input type="password"><br>
         <button type="submit">Submit</button>
     </form>
+    </div>
     <br>
-    <table border="1">
+    <table border="1" style="color: blueviolet;">
         <tr>
             <th>Name</th>
             <th>Email</th>
@@ -34,9 +38,21 @@
         <tr>
             <td>Preetha</td>
             <td>preetha@gmail.com</td>
-            <td>Preeha123</td>
+            <td>Preetha123</td>
         </tr>
     </table>
+    <div class="page">
+        <p class="sticky">page1</p>
+    </div>
+    <div class="page">
+        <p></p>page2</p>
+    </div>
+    <div class="page">
+        <p>page3</p>
+    </div>
+    <div class="page">
+        <p>page4</p>
+    </div>
 
     
 </body>
